[package]
name = "crafty-interpreters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
phf = { version = "0.10.1", features = ["macros"] }
ron = "0.7.0"
serde = { version = "1.0.136", features = ["derive", "rc"] }
